tested changed Log reg Model

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1299189f",
+   "id": "bfdaeae0",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a471cb78",
+   "id": "9ed35ee8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d80b6cee",
+   "id": "4eb55f26",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ebd87b4a",
+   "id": "2b3df03c",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "09af8c01",
+   "id": "b52fde78",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "799fea92",
+   "id": "440a39c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9f1f569a",
+   "id": "19bb2e31",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6b8bf98c",
+   "id": "9806eda0",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ee869680",
+   "id": "bd4de5fd",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "06403351",
+   "id": "ffccdc19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "584ac487",
+   "id": "f80abd42",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fbd1ecff",
+   "id": "d10fb96c",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e3672ccb",
+   "id": "08a19d8c",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "904b4b3e",
+   "id": "95d37583",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2b068596",
+   "id": "19ca5ff9",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e9039cb5",
+   "id": "9bf25b0c",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "beab989d",
+   "id": "93569af0",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d0924c69",
+   "id": "02fc5d49",
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f0d0e1ef",
+   "id": "b21f261a",
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "cd1a23be",
+   "id": "fe7ff1ad",
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a44e8f94",
+   "id": "c6fe0343",
    "metadata": {},
    "outputs": [
     {
@@ -1359,16 +1359,68 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ddee1ee",
+   "id": "e7474b15",
    "metadata": {},
    "source": [
-    "#### Conclusion: The classification score is 68.5%"
+    "#### Conclusion: The classification score is 68.5%. The Logistic Regression was done with multi_class = multinomial. Will try in the next step to use the default value for multi_class (which is auto):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "048d2e08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classification2 = LogisticRegression(solver='lbfgs').fit(X_train_transformed, y_train)\n",
+    "classification2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "14e12413",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.67"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions2 = classification2.predict(X_test_transformed)\n",
+    "classification2.score(X_test_transformed, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f427c3b8",
+   "metadata": {},
+   "source": [
+    "#### Conclusion: Not better, slightly worse."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01cd0682",
+   "id": "eefcdec1",
    "metadata": {},
    "outputs": [],
    "source": []
